# rpg-ia-master

./: FUNCIONAMENTO.md  README.md  REFATORING_REPORT.md  api.py  app.py  app_cli.py  app_streamlit.py  character_creator.py  dice_system.py  engine_utils.py  game_engine.py  gamedata.py  llm_setup.py  main.py  memory_utils.py  npc_data.py  persistence.py  prologue_manager.py  pyproject.toml  rag.py  requirements.txt  rules.txt  simulation.py  state.py  test_character.py  test_combat.py  test_loot_system.py  test_runner.py  test_suite_complete.py  tools.py  world_lore.txt
agents/: archivist.py  bestiary.py  campaign_manager.py  class_themes.py  combat.py  librarian.py  loot.py  magic_ruler.py  npc.py  router.py  ruler_completo.py  rules.py  storyteller.py
data/: artifacts.json  bestiary.json  classes.json  custom_artifacts.json  npc_database.json  origins.json  player_abilities.json  rules.txt  savegame.json  world_lore.txt
faiss_index/: index.pkl
faiss_lore_index/: index.faiss  index.pkl
faiss_rules_index/: index.faiss  index.pkl
logs/: test_full.lo
saves/: quicksave.json  save01.json  test_save.json
teste/: debug_v3_combat.txt  simulacao_berserker.txt  simulacao_hacker.txt  simulacao_rogue.txt  test_combate.txt  test_social.txt  test_tools.py  teste_chave.py
tests/: test_character.py  test_combat.py  test_entity_system.py  test_nodes.py  test_npc.py  test_state_merge.py  test_suite_complete.py
